--- a/_config.yml
+++ b/_config.yml
@@ -44,4 +44,4 @@ kramdown:
   parse_block_html: true # default for kramdown is false. This will enable using Markdown links
 
 
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
