--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,5 +1,5 @@
 - title: Concurrent Structure and Process Optimization for Minimum Cost Metal Additive Manufacturing
-  image: Pub_nemat2b.png
+  image: pic_ulu2018concurrent.png
   description:
     We develop a design for 3D AM algorithm that minimizes the overall cost of parts production through structural and process parameter optimization.
   authors:
