--- a/_data/vdel_director.yml
+++ b/_data/vdel_director.yml
@@ -1,8 +1,8 @@
 - name: Levent Burak Kara - Founder and Director of VDEL
   photo: leventburakkara.jpg
   info: Professor of Mechanical Engineering, Courtesy Appointment Robotics Institute 
-  email: lkara (at) cmu.edu
+  email: lkara@cmu.edu
   number_educ: 3
   education1: Ph.D. Carnegie Mellon University 2005
-  education1: M.S. Carnegie Mellon University 2000
-  education1: B.S. Middle East Technical University 1998
+  education2: M.S. Carnegie Mellon University 2000
+  education3: B.S. Middle East Technical University 1998
