--- a/_data/vdel_phd_current.yml
+++ b/_data/vdel_phd_current.yml
@@ -5,3 +5,11 @@
   number_educ: 2
   education1: M.S. Carnegie Mellon University, MechE
   education2: B.S. xxxxx 
+
+- name: Wentai Zhang
+  photo: wentaizhang.jpg
+  info: Ph.D. candidate, started Fall 2017
+  email: wentaiz@andrew.cmu.edu
+  number_educ: 2
+  education1: M.S. Carnegie Mellon University, MechE
+  education2: B.S. xxxxx 
