--- a/_data/vdel_current.yml
+++ b/_data/vdel_current.yml
@@ -3,7 +3,7 @@
   info: Ph.D. candidate, started Fall 2014
   email: yehan@andrew.cmu.edu
   number_educ: 2
-  education1: M.S. Carnegie Mellon University, MechE
+  education1: M.S. Carnegie Mellon University
   education2: B.S. xxxxx 
 
 - name: Wentai Zhang
@@ -11,14 +11,23 @@
   info: Ph.D. candidate, started Fall 2017
   email: wentaiz@andrew.cmu.edu
   number_educ: 2
-  education1: M.S. Carnegie Mellon University, MechE
+  education1: M.S. Carnegie Mellon University
   education2: B.S. xxxxx 
 
 - name: Haiguang Liao
   photo: haiguangliao.jpg
-  info: Ph.D. candidate, started Fall 2018, <a href="https://www.linkedin.com/in/haiguang-liao-4747bbb0/">www</a>
+  info: Ph.D. candidate, started Fall 2018, <a href="https://www.linkedin.com/in/haiguang-liao-4747bbb0/">web</a>
   email: haiguanl@andrew.cmu.edu
   number_educ: 3
-  education1: M.S. Northwestern University, MechE
+  education1: M.S. Northwestern University
   education2: M.S. Shanghai Jiao Tong University
   education3: B.S. Shanghai Jiao Tong University
+
+- name: Tong Lin
+  photo: tonglin.jpg
+  info: Ph.D. candidate, started Fall 2018
+  email: haiguanl@andrew.cmu.edu
+  number_educ: 3
+  education1: M.S. Carnegie Mellon University
+  education2: xxx
+  education3: xxx
