--- a/_data/vdel_current.yml
+++ b/_data/vdel_current.yml
@@ -18,7 +18,7 @@
 
 - name: <a href="https://teddyz829.github.io">Wentai Zhang</a>
   photo: wentaizhang.jpg
-  info: Ph.D. candidate, started Fall 2017, <a href="https://teddyz829.github.io">web</a>
+  info: Ph.D. candidate, started Fall 2017
   email: wentaiz@andrew.cmu.edu
   number_educ: 2
   education1: M.S. Carnegie Mellon University
