--- a/_data/vdel_current.yml
+++ b/_data/vdel_current.yml
@@ -10,11 +10,11 @@
 
 - name: Ye Han
   photo: yehan.jpg
-  info: Ph.D. candidate, started Fall 2014
+  info: Ph.D. candidate, started Fall 2015
   email: yehan@andrew.cmu.edu
   number_educ: 2
   education1: M.S. Carnegie Mellon University
-  education2: B.S. xxxxx 
+  education2: B.S. Dalian University of Technology 
 
 - name: <a href="https://teddyz829.github.io">Wentai Zhang</a>
   photo: wentaizhang.jpg
