--- a/_data/vdel_current.yml
+++ b/_data/vdel_current.yml
@@ -4,9 +4,9 @@
   email: zhenguon@andrew.cmu.edu
   number_educ: 4
   education1: Post-doc Georgia Tech
-  education2: Ph.D. xxx
-  education3: M.S. xxxxx 
-  education4: B.S. xxxxx 
+  education2: Ph.D. Tsinghua University
+  education3: M.S. Tsinghua University 
+  education4: B.S. Shandong University
 
 - name: Ye Han
   photo: yehan.jpg
