--- a/_data/vdel_current.yml
+++ b/_data/vdel_current.yml
@@ -36,8 +36,8 @@
 - name: Tong Lin
   photo: tonglin.jpg
   info: Ph.D. candidate, started Fall 2018
-  email: haiguanl@andrew.cmu.edu
-  number_educ: 3
+  email: tongl1@andrew.cmu.edu 
+  number_educ: 2
   education1: M.S. Carnegie Mellon University
-  education2: xxx
-  education3: xxx
+  education2: B.S. Ohio State University 
+
