--- a/_data/vdel_current.yml
+++ b/_data/vdel_current.yml
@@ -39,5 +39,5 @@
   email: tongl1@andrew.cmu.edu 
   number_educ: 2
   education1: M.S. Carnegie Mellon University
-  education2: B.S. Ohio State University 
+  education2: B.S. The Ohio State University 
 
