--- a/_data/vdel_current.yml
+++ b/_data/vdel_current.yml
@@ -41,3 +41,20 @@
   education1: M.S. Carnegie Mellon University
   education2: B.S. The Ohio State University 
 
+- name: <a href="https://www.linkedin.com/in/vidh1/">Vidhi Upadhyay </a>
+  photo: vidhiupadhyay.jpg
+  info: M.S. candidate, started Fall 2019
+  email: vupadhya@andrew.cmu.edu
+  number_educ: 1
+  education1: B.Tech. VIT University
+
+- name: Qingyi Dong
+  photo: qingyidong.jpg
+  info: Undergraduate researcher, started Spring 2019
+  email: qingyid@andrew.cmu.edu
+  number_educ: 0
+  education1: B.S. Carnegie Mellon University (ongoing)
+
+
+
+
