--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -32,7 +32,7 @@
   link:
     url: https://bibbase.org/network/publication/ulu-mccann-kara-structuraldesignusinglaplacianshells-2019
     display: Computer Graphics Forum, (2019)
-  news2: 
+  news2: <a href="https://www.youtube.com/watch?v=afVhbMicGwk"> Video</a>
 
 - title: Concurrent Structure and Process Optimization for Minimum Cost Metal Additive Manufacturing
   image: ulu2018concurrent.png
