--- a/_data/vdel_current.yml
+++ b/_data/vdel_current.yml
@@ -52,8 +52,8 @@
   photo: qingyidong.jpg
   info: Undergraduate researcher, started Spring 2019
   email: qingyid@andrew.cmu.edu
-  number_educ: 0
-  education1: B.S. Carnegie Mellon University (ongoing)
+  number_educ: 1
+  education1: B.S. Carnegie Mellon University, ECE (ongoing)
 
 
 
