--- a/_data/vdel_alumni_phd.yml
+++ b/_data/vdel_alumni_phd.yml
@@ -4,7 +4,7 @@
 
 - name: M. Ersin Yumer, 2015, Uber ATG
 
-- name: E. Batuhan Arisoy, 2015, Siemens Corporation, Corporate Technology
+- name: E. Batuhan Arisoy, 2015, Siemens Corporate Technology
 
 - name: Matt Eicholtz, 2015, Florida Southern College
 
