--- a/_data/vdel_alumni_phd.yml
+++ b/_data/vdel_alumni_phd.yml
@@ -2,7 +2,7 @@
 
 - name: Nurcan Ulu, 2018, Palo Alto Research Center
 
-- name: M. Ersin Yumer, 2015, Uber ATG
+- name: <a href="http://www.meyumer.com"> M. Ersin Yumer </a>, 2015, Uber ATG
 
 - name: E. Batuhan Arisoy, 2015, Siemens Corporate Technology
 
@@ -11,4 +11,9 @@
 - name: Gunay Orbay, 2013, ANSYS
 
 - name: Luoting Fu, 2013, WorldQuant
+
+
+
+
+
 
