--- a/_data/vdel_alumni_phd.yml
+++ b/_data/vdel_alumni_phd.yml
@@ -1,6 +1,6 @@
-- name: Erva Ulu, 2018, Palo Alto Research Center
+- name: <a href="https://ervaulu.github.io"> Erva Ulu </a>, 2018, Palo Alto Research Center
 
-- name: Nurcan Ulu, 2018, Palo Alto Research Center
+- name: <a href="https://nurcangecer.github.io"> Nurcan Ulu </a>, 2018, Palo Alto Research Center
 
 - name: <a href="http://www.meyumer.com"> M. Ersin Yumer </a>, 2015, Uber ATG
 
