--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -11,7 +11,7 @@
 - title: A Deep Reinforcement Learning Approach For Global Routing
   image: liao2019jmdglobalrouting.png
   description: We present a deep reinforcement learning method for solving the global routing problem.
-  authors: Haiguang Liao; Wentai Zhang Dong , Xuliang; Barnabas Poczos; Kenji Shimada; and Levent Burak Kara
+  authors: Haiguang Liao; Wentai Zhang ; Xuliang Dong; Barnabas Poczos; Kenji Shimada; and Levent Burak Kara
   highlight: 1
   link:
     url: https://bibbase.org/network/publication/liao-zhang-poczos-shimada-kara-adeepreinforcementlearningapproachforglobalrouting-2019
