--- a/_data/vdel_alumni_phd.yml
+++ b/_data/vdel_alumni_phd.yml
@@ -4,13 +4,19 @@
 
 - name: <a href="http://www.meyumer.com"> M. Ersin Yumer </a>, 2015, Uber ATG
 
-- name: E. Batuhan Arisoy, 2015, Siemens Corporate Technology
+- name: <a href="https://www.linkedin.com/in/erhan-batuhan-arisoy"> E. Batuhan Arisoy </a>, 2015, Siemens Corporate Technology
 
-- name: Matt Eicholtz, 2015, Florida Southern College
+- name: <a href="https://www.flsouthern.edu/faculty/eicholtz-matthew.aspx"> Matthew Eicholtz </a>, 2015, Florida Southern College
 
-- name: Gunay Orbay, 2013, ANSYS
+- name: <a href="https://www.linkedin.com/in/gunayorbay"> Gunay Orbay </a>, 2013, ANSYS
 
-- name: Luoting Fu, 2013, WorldQuant
+- name: <a href="https://www.linkedin.com/in/luoting"> Luoting Fu </a>, 2013, WorldQuant
+
+
+
+
+
+
 
 
 
