--- a/_data/vdel_current.yml
+++ b/_data/vdel_current.yml
@@ -62,10 +62,12 @@
   number_educ: 1
   education1: B.S. Carnegie Mellon University, ECE (ongoing)
 
-
-
-
-
+- name: Willetta Wisely
+  photo: willettawisely.jpg
+  info: Undergraduate researcher, started Spring 2019
+  email: wwisely@andrew.cmu.edu
+  number_educ: 1
+  education1: B.S. Carnegie Mellon University, MechE (ongoing)
 
 
 
