--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,21 +1,14 @@
-- date: 5. September 2019
-  headline: "The noise doubling paper is published in <a href='https://journals.aps.org/prb/abstract/10.1103/PhysRevB.100.104506'>Phys. Rev. B</a>!"
+- date: September 2019
+  headline: "Our paper on soft tissue deformation tracking using fiducial marker optimization has been accepted to IJCARS!"
 
-
-- date: 25. August 2019
-  headline: "<b>Doohee got an assistant professor job at Yonsei University!</b>"
-
-- date: 25. July 2019
-  headline: "<b>The inhomogeneous superfluid paper is published in <a href='https://www.nature.com/articles/s41586-019-1408-8'>Nature</a>!</b><img src='/images/newspic/SFnews.png' class='img-responsive' style='max-width: 192px' />"
-
-- date: 15. July 2019
-  headline: "We imaged the doubling of shot noise due to Andreev reflections in a STM, posted <a href='https://arxiv.org/abs/1907.05808'> on arXiv</a>."
-
-- date: 24. May 2019
-  headline: "The smart tip paper <a href='https://iopscience.iop.org/article/10.1088/1361-6528/ab1c7f/pdf'> is finally published !</a> A collaboration with the <a href='http://groeblacherlab.tudelft.nl/'>Gröblacher Lab</a> at TU Delft.<img src='/images/newspic/SmartTip.png' class='img-responsive' style='max-width: 192px' />"
+- date: September 2019
+  headline: "Our paper on deep reinforcement learning for global routing has been accepted to JMD!"
 
 - date: August 2019
-  headline: "Prof. Kara gave a talk at Auotdesk Research Toronto as part of the [AI for Engineering Summer School](https://www.ai4engineering.com)."
+  headline: "We presented four papers at this year's IDETC in Anaheim, CA!"
+
+- date: August 2019
+  headline: "Prof. Kara gave a talk at Auotdesk Research Toronto as part of the <a href='https://www.ai4engineering.com'>AI for Engineering Summer School</a>."
 
 
 # - date: 5. September 2019
