--- a/_data/news.yml
+++ b/_data/news.yml
@@ -10,6 +10,11 @@
 - date: August 2019
   headline: "Prof. Kara gave a talk at Auotdesk Research Toronto as part of the <a href='https://www.ai4engineering.com'>AI for Engineering Summer School</a>."
 
+- date: June 2019
+  headline: "Our lab just got four new Nvidia GeForce RTX 2080ti machines for our deep learning research!"
+
+
+
 
 # - date: 5. September 2019
 #   headline: "The noise doubling paper is published in <a href='https://journals.aps.org/prb/abstract/10.1103/PhysRevB.100.104506'>Phys. Rev. B</a>!"
