--- a/_data/news.yml
+++ b/_data/news.yml
@@ -4,6 +4,9 @@
 - date: September 2019
   headline: "Our paper on deep reinforcement learning for global routing has been accepted to JMD!"
 
+- date: September 2019
+  headline: "We welcome Vidhi, Willetta and Ruchit to our lab!"
+
 - date: August 2019
   headline: "We presented four papers at this year's IDETC in Anaheim, CA!"
 
