--- a/_data/vdel_director.yml
+++ b/_data/vdel_director.yml
@@ -1,4 +1,4 @@
-- name: Levent Burak Kara - Founder and Director of VDEL
+- name: Levent Burak Kara
   photo: leventburakkara.jpg
   info: Professor of Mechanical Engineering, Courtesy Appointment Robotics Institute 
   email: lkara@cmu.edu
