--- a/_data/vdel_current.yml
+++ b/_data/vdel_current.yml
@@ -62,13 +62,18 @@
   number_educ: 1
   education1: B.S. Carnegie Mellon University, ECE (ongoing)
 
+    - name: Jackie (Yifei) Li
+  photo: jackieli.jpg
+  info: Undergraduate researcher, started Spring 2019
+  email: yifeil1@andrew.cmu.edu
+  number_educ: 1
+  education1: B.S. Carnegie Mellon University, CS (ongoing)
+
 - name: Willetta Wisely
   photo: willettawisely.jpg
-  info: Undergraduate researcher, started Spring 2019
+  info: Undergraduate researcher, started Fall 2019
   email: wwisely@andrew.cmu.edu
   number_educ: 1
   education1: B.S. Carnegie Mellon University, MechE (ongoing)
-
-
 
 
