--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
-- date: September 2019
+- date: October 2019
   headline: "Our paper on soft tissue deformation tracking using fiducial marker optimization has been accepted to IJCARS!"
+
+- date: October 2019
+  headline: "Our lab is a part of the newly formed Center of Excellence: Data-Driven Discovery of Optimized Multifunctional Material Systems, funded by AFRL!"
 
 - date: September 2019
   headline: "Our paper on deep reinforcement learning for global routing has been accepted to JMD!"
