--- a/_data/vdel_current.yml
+++ b/_data/vdel_current.yml
@@ -55,6 +55,13 @@
   number_educ: 1
   education1: B.Tech. VIT University
 
+- name: Ruchit Sandeep Doshi
+  photo: ruchitsandeepdoshi.jpg
+  info: M.S. candidate, started Fall 2019
+  email: ruchitsd@andrew.cmu.edu
+  number_educ: 1
+  education1: B.S. Mechanical Engineering, Mumbai University 
+
 - name: Qingyi Dong
   photo: qingyidong.jpg
   info: Undergraduate researcher, started Spring 2019
